--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 image = "0.24.6"
 kamadak-exif = "0.5.5"
+js-sys = "0.3.52"
 #serde = { version = "1.0", features = ["derive"] }
 #serde-wasm-bindgen = "0.5.0"
 
